After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777585 - "stop loading the current page" tries to reload it instead.
"stop loading the current page" tries to reload it instead.
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Controls
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-21 20:00 UTC by Hussam Al-Tayeb
Modified: 2017-01-22 16:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
header-bar: Make stop button work again (976 bytes, patch)
2017-01-22 16:30 UTC, Michael Catanzaro
committed Details | Review

Description Hussam Al-Tayeb 2017-01-21 20:00:55 UTC
Open a large website and then press "stop loading the current page" while it is loading.
Instead of stopping, it reloads.
Comment 1 Hussam Al-Tayeb 2017-01-21 20:44:21 UTC
Escape key works.
Comment 2 Michael Catanzaro 2017-01-22 16:30:47 UTC
The following fix has been pushed:
5eb43a0 header-bar: Make stop button work again
Comment 3 Michael Catanzaro 2017-01-22 16:30:51 UTC
Created attachment 343985 [details] [review]
header-bar: Make stop button work again