header-bar: Make stop button work again

https://bugzilla.gnome.org/show_bug.cgi?id=777585